@@ -1499,19 +1499,19 @@ package body Errout is
       Cur_Msg := No_Error_Msg;
       List_Pragmas.Init;
 
-      --  Initialize warnings table. As an optimization, if all warnings are
-      --  suppressed, we supply an initial dummy entry covering all possible
-      --  source locations, which avoids taking into account pragma Warnings
-      --  in the source. In GNATprove_Mode, this optimization is disabled, as
-      --  we rely on the Warnings table to be correctly filled for back-end
-      --  warnings.
+      --  Initialize warnings table
 
       Warnings.Init;
       Specific_Warnings.Init;
 
-      if not GNATprove_Mode
-        and then Warning_Mode = Suppress
-      then
+      --  As an optimization, if all warnings are suppressed, we supply an
+      --  initial dummy entry covering all possible source locations, which
+      --  avoids taking into account pragma Warnings in the source. In
+      --  GNATprove_Mode, this optimization is disabled, as we rely on
+      --  the Warnings table to be correctly filled for use of the warning
+      --  mechanism for gnatprove itself.
+
+      if not GNATprove_Mode and then Warning_Mode = Suppress then
          Warnings.Append
            ((Start => Source_Ptr'First, Stop => Source_Ptr'Last));
       end if;
